--- a/threeIcons.css
+++ b/threeIcons.css
@@ -5,7 +5,6 @@
     justify-content: space-between;
     max-width: 1200px;
     width: 100%;
-    max-height: 912px;
     margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
@@ -106,7 +105,6 @@
         max-width: 335px;
         width: 100%;
         height: 100%;
-        max-height: 1300px;
         margin-top: 0px;
         margin-left: auto;
         margin-right: auto;
@@ -128,6 +126,7 @@
 
     .grid2BodyText{
         margin-bottom: 0px;
+        max-width: 330px;
     }
 
     .pinkButton{
@@ -157,7 +156,6 @@
         max-width: 600px;
         width: 100%;
         height: 100%;
-        max-height: 1300px;
         margin-top: 0px;
         margin-left: auto;
         margin-right: auto;
